IDI-46: Fixing an issue with not being able to read links in high contrast that break over two lines and are focussed.

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body.fl-theme-uio-bw, body.fl-theme-uio-wb { background-image: none; }
 }
 a {
     color: #0076B0;
+    display: inline-block;
 }
 a:hover,
 a:focus,
